tetrate/tis602/e2e/bad-resouces.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: example-namespace
spec:
  ports:
  - port: 80
    name: "http-port"
    appProtocol: "invalid-protocol-name"
