tetrate/tis602/e2e/good-resource.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: default
spec:
  ports:
  - port: 80
    name: "http-port"
    appProtocol: "http"
