tetrate/tis602/e2e/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-service-port-names-regex
spec:
  validationFailureAction: Enforce
